<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/colorPrimary"
        android:scaleType="centerCrop">
    </FrameLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_gravity="center"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/logo"
        android:layout_marginTop="140dp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="70dp">
        <TextView
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="34dp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_above="@+id/acc"
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/image"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/username"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_user_name"
            android:layout_marginLeft="46dp"
            android:layout_marginRight="46dp"
            android:textColorHint="@color/colorHint"
            android:textColor="@color/colorText"
            android:maxLength="12"
            android:background="#0000"
            android:padding="16dp"
            android:gravity="left" />
        <View
            android:layout_width="match_parent"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="#dad8d8"/>

        <EditText
            android:id="@+id/email"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_email"
            android:layout_marginLeft="46dp"
            android:layout_marginRight="46dp"
            android:textColorHint="@color/colorHint"
            android:textColor="@color/colorText"
            android:maxLength="12"
            android:background="#0000"
            android:padding="16dp"
            android:gravity="left" />

        <View
            android:layout_width="match_parent"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="#dad8d8"/>

        <!-- android:drawableRight="@drawable/eye" -->
        <EditText
            android:id="@+id/password"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_password"
            android:layout_marginLeft="46dp"
            android:layout_marginRight="46dp"

            android:textColorHint="@color/colorHint"
            android:textColor="@color/colorText"
            android:background="#0000"
            android:padding="16dp"
            android:gravity="left"
            android:inputType="textPassword" />

        <View
            android:layout_width="match_parent"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:layout_height="1dp"
            android:layout_marginBottom="25dp"
            android:background="#dad8d8"/>
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2b73e1"
            android:text="@string/text_sing_up"
            android:textSize="16dp"
            android:textColor="#fff"
            android:gravity="center"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="120dp"
            android:padding="9dp"
            android:layout_marginTop="16dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/acc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_already_have_account"
        android:layout_above="@+id/tv_sign_in_here"
        android:gravity="center"
        android:lines="1"/>
    <TextView
        android:id="@+id/tv_sign_in_here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_sing_in_here"
        android:textColor="#2b73e1"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:lines="1"
        android:layout_marginBottom="22dp"/>
</RelativeLayout>